<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProyectoEnvioDeArchivos</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    <!-- Main Activity -->
    <string name="enviar_imagen">Enviar una imagen</string>
    <string name="recibir_imagen">Recibir una imagen</string>

    <!-- Pantalla Principal -->
    <string name="bienvenido">¡Bienvenido</string>
    <string name="que_desea">¿Qué desea enviar?</string>
    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    
 <!-- Pantalla Conexiones tambien -->
    <string name="title_activity_conexiones">Conexiones</string>
    <string name="hello_world">Hello world!</string>

    <!-- Pantalla Conexiones -->
    <string name="enviar">Enviar</string>
    <string name="ActivarBluetooth">Activar Bluetooth</string>
    <string name="BuscarDispositivos">Buscar Dispositivos</string>
    <string name="DesactivarBluetooth">Desactivar Bluetooth</string>
    <string name="DetectadoDispositivo">Detectado Dispositivo</string>
    <string name="title_activity_recibir_imagen">RecibirImagen</string>

</resources>
