<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cursoandroid.proyectoenviodearchivos.PantallaPrincipal" >

    <LinearLayout
        android:id="@+id/layout_linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/bienvenida_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bienvenido" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/que_desea" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="true" >

            <ImageButton
                android:id="@+id/boton_camara"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:onClick="tomarFoto"
                android:src="@android:drawable/ic_menu_camera" />

            <ImageButton
                android:id="@+id/boton_imagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:src="@android:drawable/ic_menu_gallery" />

            <ImageButton
                android:id="@+id/boton_archivo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:src="@drawable/ic_insert_drive_file_white_18dp" />
        </GridLayout>

        <!--
         <fragment android:name="com.cursoandroid.proyectoenviodearchivos.FragmentImagen"
            android:id="@+id/imagen_fragment"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        -->

        <ImageView
            android:id="@+id/imagen_pantalla"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        
        <Button android:id="@+id/boton_volver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/volver"
            android:onClick="metodoVolver"/>
        
        <Button android:id="@+id/boton_siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/siguiente"/>
    </RelativeLayout>

</RelativeLayout>